feat: Add slug to Post
