# docs/static/openapi.json
@@ -5933,6 +5933,11 @@
                           "title": "Post description",
                           "description": "Post description",
                           "type": "string"
+                        },
+                        "slug": {
+                          "title": "Post slug (unique)",
+                          "description": "Post slug (unique)",
+                          "type": "string"
                         }
                       }
                     },
